CHANGELOG
#########

This document describes changes between each past release.

0.7.4 (2020-06-10)
==================

- Perform more complete checking of the `state` parameter when authorizing
  an OAuth code.
- When verifying OAuth access tokens, try to verify them locally as a JWT
  rather than passing them to the remote verification endpoint.


0.7.3 (2019-07-26)
==================

- Allow specifying a `ttl` when redeeming an authorization code.


0.7.2 (2019-06-03)
==================

- Several cleans for Python3 compatibility; thanks Tomáš Chvátal!
- Fix a bug could accidentally introduce multiple slashes into
  the result of oauth.Client.get_redirect_url.


0.7.1 (2019-03-18)
==================

- Fix test bustage due to session verification.


0.7.0 (2019-03-18)
==================

- Add support for TOTP.


0.6.0 (2018-05-04)
==================

- Add support for PKCE challenge and response in the OAuth flow.
- Add ability to supply `keys_jwk` when starting an OAuth flow.
- Improve scope-matching logic based on new FxA testcases,
  including handling of URL-format scopes.


0.5.0 (2018-01-12)
==================

- Add ability to login with unblock codes.
- Tell testrunners to ignore some test helper utilities.


0.4.0 (2017-??-??)
==================

- Use `pkg_resources` to handle package version. (#45)
- Add a shortcut for authorizing oauth codes directly from a core.Session,
  rater than requiring the caller to explicitly create an assertion.


0.3.0 (2016-09-07)
==================

- Add a ``verify_email_code(uid, code)`` method to the ``core.Client`` (#43).


0.2.0 (2016-05-11)
==================

- Make sure fxa.tests.utils can be used without installing PyFxA tests dependencies. (#41)


0.1.3 (2016-04-22)
==================

- Update the User-Agent so that we can detect PyFxA calls. (#40)


0.1.2 (2016-04-21)
==================

- Correctly send request to the Auth server.


0.1.1 (2016-01-13)
==================
